fix ie overflow; force reload auto play

--- a/styles3.css
+++ b/styles3.css
@@ -155,6 +155,7 @@ header, footer {
 .headphone-container {
     text-align: center;
     padding: 15px;
+    width: 100%;
 }
 
 .headphone-container .headphone-icon-text-container {
